--- a/vite-project/src/common/ProjectCard.css
+++ b/vite-project/src/common/ProjectCard.css
@@ -40,20 +40,30 @@
 }
 
 .light-btn {
-    background-color:#fff;
-    color: #333;
+    background-color: #fff;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     text-decoration: none;
+    border: none;
+    font-size: medium;
 }
 
 .dark-btn {
-    background-color: #333;
-    color: #fff;
+    background-color: #0987f2;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     text-decoration: none;
+    border: none;
+    font-size: medium;
 }
-.light-text {
-    color: #333;
+
+.light-text a {
+    color: #0987f2 !important; /* Force color change */
+    text-decoration: none;
+
+}
+
+.dark-text a {
+    color: #fff !important; /* Force color change */
+    text-decoration: none;
 }
