--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,15 +1,14 @@
 :root {
   --background-color: #fff;
-  --btn-color: #0987f2;
+  --btn-color: #282F3C;
   --btn-text-color: #fff;
   --project-card-bg: #ffffff00;
   --text-color: #222;
   --form-text-color: #555;
   --footer-text-color: #888;
 }
-
 [data-theme='dark'] {
-  --background-color: #222;
+  --background-color:#0A0B10;
   --btn-color: #fff;
   --btn-text-color: #222;
   --project-card-bg: #fff;
@@ -40,15 +39,8 @@ p {
   padding: 0;
 }
 
-h2,
-h3,
 p {
-  font-family: 'Roboto Mono', monospace;
-}
-
-h1,
-h2 {
-  text-transform: uppercase;
+  font-family: 'Poppins', monospace;
 }
 
 h2,
