--- a/vite-project/src/sections/Hero/HeroStyles.module.css
+++ b/vite-project/src/sections/Hero/HeroStyles.module.css
@@ -1,11 +1,15 @@
+@import "tailwindcss";
+
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 20px;
-    text-align: center;
-    height: 100dvh;
+   text-align: center;
+    height: 100vh;
     min-height: 500px;
+   
   
     .hero {
       max-width: 200px;
@@ -42,17 +46,16 @@
       font-size: 20px;
       font-weight: bold;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-      transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
+     
     }
   
-    button:hover {
-      transform: scale(1.05);
-    }
-  
-    button:active {
-      transform: translateY(2px);
-      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
-    }
+   
+  }
+  .rolename {
+    font-weight: 500;
+    display:flex ;
+    text-align: center;
+    margin-top: -20px;
   }
   
   .colorModeContainer {
@@ -75,7 +78,7 @@
   
   .description {
     max-width: 35ch;
-    font-size: 20px;
+    font-size: 18px;
   }
   
   .info {
@@ -84,11 +87,25 @@
     gap: 20px;
     margin-top: 50px;
   }
+  .heroname {
+    font-size:37px;
+  }
   @media(width < 800px) {
     
     .info{
       margin-top: 0px;
     }
+    .container {
+      margin-top: 20px;
+    }
+    .heroname {
+      font-size: 28px;
+      text-align: center;
+    }
+    .description {
+      font-size: 15px;
+    }
+   
   }
   @media (width >= 800px) {
     .container {
@@ -109,6 +126,11 @@
       .hero {
         max-width: 400px;
         width: 400px;
+        
       }
     }
   }
+
+
+  
+  
